--- a/src/app/gabarits/article/article.component.html
+++ b/src/app/gabarits/article/article.component.html
@@ -107,11 +107,11 @@
             <div class="row " >
                 <div class="articles" *ngFor="let article of articles ">
                     <div class="row w-100">
-                        <div class="col-3 image">
+                        <div class="col-3 image" *ngIf="article.image">
                             <img src="https://step-s3.s3.amazonaws.com/{{article.image}}"  alt="">
                         </div>
-                        <div class="col-7">
-                            <h3>{{article.title | slice:0:20}}...</h3>
+                        <div [ngClass]="{'col-7': article.image, 'col-10': !article.image}">
+                            <h3>{{article.title | slice:0:20 }}...</h3>
                             <h5>{{article.content | slice:0:100}}...</h5>
                         </div>
                         <div class="col-2 action">
